--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/mobile-menu.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -25,14 +26,14 @@
                 <a class="nav-link" href="#"><i class="fas fa-user"></i></a>
             </li>
         </ul>
-        <button class="navbar-toggler order-1" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler order-1" id="burger" type="button" data-toggle="collapse"
+                data-target="#main-nav"
+                aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="assets/img/icon-menu.svg" alt="icon-menu" class="w-100">
             </span>
         </button>
-        <div class="collapse navbar-collapse mx-lg-5 order-4 order-lg-1" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse mx-lg-5 order-4 order-lg-1" id="main-nav">
             <ul class="navbar-nav">
                 <li class="nav-item active px-lg-3">
                     <a class="nav-link" href="#">Booking</a>
