changed mobile menu, image compression

--- a/index.html
+++ b/index.html
@@ -26,14 +26,27 @@
                 <a class="nav-link" href="#"><i class="fas fa-user"></i></a>
             </li>
         </ul>
-        <button class="navbar-toggler order-1" id="burger" type="button" data-toggle="collapse"
+        <button class="navbar-toggler order-1" id="burger" type="button"
                 data-target="#main-nav"
                 aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="assets/img/icon-menu.svg" alt="icon-menu" class="w-100">
             </span>
         </button>
-        <div class="collapse navbar-collapse mx-lg-5 order-4 order-lg-1" id="main-nav">
+        <nav class="main-nav" id="main-nav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Booking</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Help</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact us</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="collapse navbar-collapse mx-lg-5 order-4 order-lg-1">
             <ul class="navbar-nav">
                 <li class="nav-item active px-lg-3">
                     <a class="nav-link" href="#">Booking</a>
@@ -1881,18 +1894,18 @@
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous" async></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/b48621f243.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
-<script src="assets/js/owl.carousel.min.js"></script>
+        crossorigin="anonymous" async></script>
+<script src="https://kit.fontawesome.com/b48621f243.js" crossorigin="anonymous" async></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js" async></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" async></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js" async></script>
+<script src="assets/js/owl.carousel.min.js" async></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-<script src="assets/js/main.js"></script>
+        crossorigin="anonymous" async></script>
+<script src="assets/js/main.js" async></script>
 </body>
 </html>
