added margin to  .info

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                             </div>
                             <p class="card-text">Hunday Solaris, Toyota Prius, Ford Crown Victoria.</p>
                         </div>
-                        <div class="col-5">
+                        <div class="col-5 info">
                             <div class="card-body car-price text-center">
                                 <p class="card-text mb-0">From</p>
                                 <h5 class="card-title">&#8364 150</h5>
@@ -622,7 +622,7 @@
                             </div>
                             <p class="card-text">Hunday Solaris, Toyota Prius, Ford Crown Victoria</p>
                         </div>
-                        <div class="col-5">
+                        <div class="col-5 info">
                             <div class="card-body car-price text-center">
                                 <p class="card-text mb-0">From</p>
                                 <h5 class="card-title">&#8364 220</h5>
@@ -660,7 +660,7 @@
                             </div>
                             <p class="card-text">Hunday Solaris, Toyota Prius, Ford Crown Victoria</p>
                         </div>
-                        <div class="col-5">
+                        <div class="col-5 info">
                             <div class="card-body car-price text-center">
                                 <p class="card-text mb-0">From</p>
                                 <h5 class="card-title">&#8364 125</h5>
@@ -698,7 +698,7 @@
                             </div>
                             <p class="card-text">Hunday Solaris, Toyota Prius, Ford Crown Victoria</p>
                         </div>
-                        <div class="col-5">
+                        <div class="col-5 info">
                             <div class="card-body car-price text-center">
                                 <p class="card-text mb-0">From</p>
                                 <h5 class="card-title">&#8364 250</h5>
