--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Airport Taxis</title>
     <link rel="stylesheet" href="dist/main.css">
-    <script src="https://kit.fontawesome.com/b48621f243.js" crossorigin="anonymous"></script>
-    <script src="dist/bundle.js"></script>
+    <script defer src="https://kit.fontawesome.com/b48621f243.js" crossorigin="anonymous"></script>
+    <script defer src="dist/bundle.js"></script>
 </head>
 <body>
 <header>
